Corrigido padding pagina meus personagens

--- a/templates/meus_personagens.html
+++ b/templates/meus_personagens.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/meus_personagens.css')}}">
 </head>
 <body>
-    <div id="background2" class="">
+    <div id="background2" class="" style="padding-bottom:20rem ;">
 
         <header>
             <nav class="navbar navbar-expand-lg bg-body-tertiary navbarhome">
