--- a/templates/configuracoes.html
+++ b/templates/configuracoes.html
@@ -118,7 +118,7 @@
                         </a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="">
+                        <a class="nav-link" href="{{ url_for('minhas_aventuras')}}">
                           <svg xmlns="http://www.w3.org/2000/svg" width="60" height="20" fill="currentColor" class="bi bi-chevron-right chevron" viewBox="0 0 16 16">
                             <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708"/>
                           </svg>Minhas Aventuras</a>
