--- a/templates/minhas_aventuras.html
+++ b/templates/minhas_aventuras.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meus Personagens</title>
+    <title>Minhas Campanhas</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/meus_personagens.css')}}">
 </head>
 <body>
-    <div id="background2" class="" style="padding-bottom:20rem ;">
+    <div id="background4" class="" style="padding-bottom:20rem ;">
 
         <header>
             <nav class="navbar navbar-expand-lg bg-body-tertiary navbarhome">
@@ -43,7 +43,7 @@
                           </svg>Minhas Aventuras</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="">
+                        <a class="nav-link" href="{{ url_for('meus_personagens')}}">
                           <svg xmlns="http://www.w3.org/2000/svg" width="60" height="20" fill="currentColor" class="bi bi-chevron-right chevron" viewBox="0 0 16 16">
                             <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708"/>
                           </svg>Meus Personagens</a>
@@ -76,67 +76,31 @@
         </header>
 
 
-        <div id="container" class="center textobg1boxhome">
+        <div id="container" class="center textobg1boxhome" style="padding: 10px;">
             <div id="container-inner">
                 <p id="textoconfigbox1">Minhas Campanhas</p>
                 <p id="textoconfigbox1desc">Gerencie suas campanhas</p>
                 
-                {% if not personagens %}
+                {% if not lista_campanhas %}
                     <div class="empty-personagem-list">
-                        <h4>Você ainda não tem nenhum personagem</h4>
+                        <h4>Você ainda não tem nenhuma campanha</h4>
                         <h1>😿</h1>
                     </div>
                 {% else %}
                     <div class="card-list-container">
-                        {% for personagem in personagens %}
+                        {% for campanha in lista_campanhas %}
                         <div class="card mb-4 container-fluid personagem">
-                            <div class="nome">{{ personagem["nome"] }} - Nível {{ personagem["nivel"] }}</div>
-                            <div class="campanha">{{ personagem["campanha"]["nome"] }}</div>
+                            <div class="nome">{{ campanha["nome"] }} - {{ campanha["data_inicio"] }}</div>
                             <div class="stat-section">
-                                <div class="stat-title">Informações</div>
+                                <div class="stat-title center text-center ">Informações</div>
                                 <div class="stat">
-                                    <div class="stat-label">Raça</div>
-                                    <div class="stat-value">{{ personagem["raca"] }}</div>
+                                    <div class="stat-label">Status</div>
+                                    <div class="stat-value">{{ campanha["status"] }}</div>
                                 </div>
-                                <div class="stat">
-                                    <div class="stat-label">Classe</div>
-                                    <div class="stat-value">{{ personagem["classe"] }}</div>
-                                </div>
-                                <div class="stat">
-                                    <div class="stat-label">Pontos de Vida</div>
-                                    <div class="stat-value">{{ personagem["pontos_vida"] }}</div>
-                                </div>
-                                <div class="stat">
-                                    <div class="stat-label">Experiência</div>
-                                    <div class="stat-value">{{ personagem["pontos_experiencia"] }}</div>
-                                </div>
-                            </div>
-                            <div class="stat-section">
-                                <div class="stat-title">Atributos</div>
-                                <div class="stat">
-                                    <div class="stat-label">Força</div>
-                                    <div class="stat-value">{{ personagem["forca"] }}</div>
-                                </div>
-                                <div class="stat">
-                                    <div class="stat-label">Destreza</div>
-                                    <div class="stat-value">{{ personagem["destreza"] }}</div>
-                                </div>
-                                <div class="stat">
-                                    <div class="stat-label">Constituição</div>
-                                    <div class="stat-value">{{ personagem["constituicao"] }}</div>
-                                </div>
-                                <div class="stat">
-                                    <div class="stat-label">Inteligência</div>
-                                    <div class="stat-value">{{ personagem["inteligencia"] }}</div>
-                                </div>
-                                <div class="stat">
-                                    <div class="stat-label">Sabedoria</div>
-                                    <div class="stat-value">{{ personagem["sabedoria"] }}</div>
-                                </div>
-                                <div class="stat">
-                                    <div class="stat-label">Carisma</div>
-                                    <div class="stat-value">{{ personagem["carisma"] }}</div>
-                                </div>
+                                <div class="stat-title center text-center ">Sinopse</div>
+                                <div class="stat textbox">
+                                  <div class="stat-value">{{ campanha["sinopse"] }}</div>
+                              </div>
                             </div>
                         </div>  
                         {% endfor %}
