Começo pagina para Criar Nova Campanha

--- a/templates/configuracoes.html
+++ b/templates/configuracoes.html
@@ -158,9 +158,9 @@
 
 
         <div id="configbox1" class="center textobg1boxhome">
-            <div id="configbox1inner">
-                <p id="textoconfigbox1">Configurações de Perfil</p>
-                <p id="textoconfigbox1desc">Personalize sua experiência como Mestre</p>
+            <div id="container-inner">
+                <p id="textoconfigbox1" class="text-center">Configurações de Perfil</p>
+                <p id="textoconfigbox1desc" class="text-center">Personalize sua experiência como Mestre</p>
 
                 <div class="card cardform mb-4 container-fluid configcard center">
                     <div class="card-header">
