--- a/templates/meus_personagens.html
+++ b/templates/meus_personagens.html
@@ -78,7 +78,7 @@
 
         <div id="container" class="center textobg1boxhome">
             <div id="container-inner">
-                <p id="textoconfigbox1">Meus Personagens</p>
+                <p id="textoconfigbox1" style="padding-top: 30px;">Meus Personagens</p>
                 <p id="textoconfigbox1desc">Gerencie os seus personagens</p>
                 
                 {% if not personagens %}
