--- a/templates/iniciar_campanha.html
+++ b/templates/iniciar_campanha.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Minhas Campanhas</title>
+    <title>Iniciar Campanha</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/meus_personagens.css')}}">
 </head>
 <body>
-    <div id="background4" class="" style="padding-bottom:20rem ;">
+    <div id="background2" class="" style="padding-bottom:20rem ;">
 
         <header>
             <nav class="navbar navbar-expand-lg bg-body-tertiary navbarhome">
@@ -37,13 +37,13 @@
                         </a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="">
+                        <a class="nav-link" href="{{ url_for('minhas_aventuras')}}">
                           <svg xmlns="http://www.w3.org/2000/svg" width="60" height="20" fill="currentColor" class="bi bi-chevron-right chevron" viewBox="0 0 16 16">
                             <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708"/>
                           </svg>Minhas Aventuras</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('meus_personagens')}}">
+                        <a class="nav-link" href="{{ url_for('meus_personagens') }}">
                           <svg xmlns="http://www.w3.org/2000/svg" width="60" height="20" fill="currentColor" class="bi bi-chevron-right chevron" viewBox="0 0 16 16">
                             <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708"/>
                           </svg>Meus Personagens</a>
@@ -75,46 +75,83 @@
               </nav>
         </header>
 
-
-        <div id="container" class="center textobg1boxhome" style="padding: 10px;">
+        <div id="configbox1" class="center textobg1boxhome">
             <div id="container-inner">
-                <p id="textoconfigbox1" style="padding-top: 30px;">Minhas Campanhas</p>
-                <p id="textoconfigbox1desc">Gerencie suas campanhas</p>
-                
-                {% if not lista_campanhas %}
-                    <div class="empty-personagem-list">
-                        <h4>Você ainda não tem nenhuma campanha</h4>
-                        <h1>😿</h1>
-                    </div>
-                {% else %}
-                    <div class="card-list-container">
-                        {% for campanha in lista_campanhas %}
-                        <div class="card mb-4 container-fluid personagem">
-                            <div class="nome">{{ campanha["nome"] }} - {{ campanha["data_inicio"] }}</div>
-                            <div class="stat-section">
-                                <div class="stat-title center text-center ">Informações</div>
-                                <div class="stat">
-                                    <div class="stat-label">Status</div>
-                                    <div class="stat-value">{{ campanha["status"] }}</div>
+                <p id="textoconfigbox1">Criação de campanha</p>
+                <p id="textoconfigbox1desc">Embarque em uma nova jornada</p>
+
+                <div class="card cardform mb-4 container-fluid configcard center">
+                    <!-- Form Inserir nome da nova campanha -->
+                    <form action="{{ url_for('alterar_nome') }}" method="POST" class="configform" style="padding-bottom: 40px;">
+                        <div id="carouselExample" class="carousel slide">
+                            <div class="carousel-inner">
+
+                              <div class="carousel-item active">
+                                <div class="container">
+                                    <div class="mb-3">
+                                        <label for="usuario" class="form-label">Insira o nome para sua nova campanha:</label>
+                                        <input type="text" class="form-control" id="usuario" name="usuario" required placeholder="Insira o nome aqui">
+                                    </div>
+                                    <div class="carouselbuttons" style="display: flex;">
+                                        <button type="button" disabled class="btn btn-primary" data-bs-target="#carouselExample" data-bs-slide="prev" style="background-color: gray; border-color: gray;">👈Voltar</button>
+                                        <button type="button" class="btn btn-primary" data-bs-target="#carouselExample" data-bs-slide="next">Avançar👉</button>
+                                    </div>
+                                    <button type="submit" class="btn btn-primary">🌟Criar</button>
                                 </div>
-                                <div class="stat-title center text-center ">Sinopse</div>
-                                <div class="stat textbox">
-                                  <div class="stat-value">{{ campanha["sinopse"] }}</div>
                               </div>
+
+                              <div class="carousel-item">
+                                <div class="container">
+                                    <div class="mb-3">
+                                        <label for="usuario" class="form-label">Insira o nome para sua nova campanha:</label>
+                                        <input type="text" class="form-control" id="usuario" name="usuario" required placeholder="Digite seu novo nome">
+                                    </div>
+                                    <div class="carouselbuttons" style="display: flex;">
+                                        <button type="button" class="btn btn-primary" data-bs-target="#carouselExample" data-bs-slide="prev">👈Voltar</button>
+                                        <button type="button" class="btn btn-primary" data-bs-target="#carouselExample" data-bs-slide="next">Avançar👉</button>
+                                    </div>
+                                </div>
+
+                              </div>
+
+                              <div class="carousel-item">
+                                <div class="container">
+                                    <div class="mb-3">
+                                        <label for="usuario" class="form-label">Insira o nome para sua nova campanha:</label>
+                                        <input type="text" class="form-control" id="usuario" name="usuario" required placeholder="Digite seu novo nome">
+                                    </div>
+                                    <div class="carouselbuttons" style="display: flex;">
+                                        <button type="button" class="btn btn-primary" data-bs-target="#carouselExample" data-bs-slide="prev">👈Voltar</button>
+                                        <button type="button" disabled class="btn btn-primary" data-bs-target="#carouselExample" data-bs-slide="next" style="background-color: gray; border-color: gray;">Avançar👉</button>
+                                    </div>
+                                </div>
+                              </div>
+
                             </div>
-                        </div>  
-                        {% endfor %}
-                    </div>
-                {% endif %}
+                          </div>
+
+
+                    </form>
+
+
+
+
+
+                </div>
+
+
                 
+
+
+          </div>
             </div>
         </div>
     </div>
-
+        
     <footer class="py-5 text-center footer">
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi blandit varius magna et efficitur.</p>
         <p class="mb-0">
-          <a href="#">Voltar ao topo</a>
+          <a href="#">👈Voltar ao topo</a>
         </p>
         <!-- Adiciona estilo unico quando a navbar estende -->
         <script>
