--- a/static/css/style.css
+++ b/static/css/style.css
@@ -537,6 +537,35 @@ footer{
     animation-fill-mode: forwards;
 }
 
+.criarpersonagem {
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    position: fixed;
+    color:#F8D5B5;
+    padding: 15px 25px;
+    border-radius: 8px;
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
+    z-index: 9999;
+    animation: fadein 0.5s;
+    top: 15rem;
+}
+
+#backgroundblur{
+    backdrop-filter: blur(4px);
+    z-index: 1000;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background:rgba(0, 0, 0, 0.5);
+    animation: fadein 0.5s;
+}
+
+.hidden{
+    display:none
+}
+
+
 .confirm-dialog {
     display: none;
     position: fixed;
@@ -573,6 +602,11 @@ footer{
     min-height: 300px;
     overflow:scroll;
     overflow-x: hidden;
+}
+
+@keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
 }
 
 @keyframes float-up {
