--- a/templates/home.html
+++ b/templates/home.html
@@ -9,6 +9,12 @@
 </head>
 <body>
 
+                      <!-- captura a variavel 'sucessopersonagem' declarada no app.py em caso de sucessopersonagem -->
+                      {% if sucessopersonagem %}
+                      <div id="sucesso1" class="sucesso1" role="alert">
+                      {{ sucessopersonagem }}
+                      </div>
+                      {% endif %} 
 
     <div id="background1" class="">
 
@@ -30,7 +36,7 @@
                   <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                       <li class="nav-item">
-                        <a class="nav-link" href="">
+                        <a class="nav-link" href="{{ url_for('iniciar_campanha') }}">
                           <svg xmlns="http://www.w3.org/2000/svg" width="60" height="20" fill="currentColor" class="bi bi-chevron-right chevron" viewBox="0 0 16 16">
                             <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708"/>
                           </svg>
@@ -88,7 +94,7 @@
     </div>
 
 
-    <div id="quickinfo">
+    <!-- <div id="quickinfo">
         <h3 id="qititle" class="text-center">Informações Rápidas</h3>
 
         <div id="cardCarousel" class="carousel slide" data-bs-ride="carousel">
@@ -127,9 +133,9 @@
                 <span class="visually-hidden">Próxima</span>
             </button>
         </div>
-    </div>
+    </div> -->
 
-    <div id="chat">
+    <!-- <div id="chat">
         <h3 id="chatTitle" class="text-center">Chat de Aventura</h3>
         <div id="chatContainerOuter" class="container mt-5">
             <div class="chat-container">
@@ -152,7 +158,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 
 
 
