--- a/templates/minhas_aventuras.html
+++ b/templates/minhas_aventuras.html
@@ -29,7 +29,7 @@
                   <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                       <li class="nav-item">
-                        <a class="nav-link" href="">
+                        <a class="nav-link" href="{{ url_for('iniciar_campanha') }}">
                           <svg xmlns="http://www.w3.org/2000/svg" width="60" height="20" fill="currentColor" class="bi bi-chevron-right chevron" viewBox="0 0 16 16">
                             <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708"/>
                           </svg>
@@ -77,6 +77,11 @@
 
 
         <div id="container" class="center textobg1boxhome" style="padding: 10px;">
+          <div style="display: flex;">
+            <a class="btn btn-primary" href="{{ url_for('iniciar_campanha')}}" style="width: auto; height: auto; margin-left: 95%;">
+              <img src="../img/plus.svg" alt="➕" width="20" height="20">
+            </a>                                   
+          </div>
             <div id="container-inner">
                 <p id="textoconfigbox1" style="padding-top: 30px;">Minhas Campanhas</p>
                 <p id="textoconfigbox1desc">Gerencie suas campanhas</p>
