--- a/templates/cadastro.html
+++ b/templates/cadastro.html
@@ -22,7 +22,7 @@ header .navbar {
                 <div class="container-fluid ">
                     <a class="navbar-brand center" href="/">
                         <img src="img/dice-d20-solid2.svg" alt="Logo" width="80" height="64" class="center" id="logotipo">
-                        <p class="text-center" id="logotexto">Exemplo</p>
+                        <p class="text-center" id="logotexto">Exemploooooooo</p>
                       </a>              
                 </div>
               </nav>
