--- a/templates/iniciar_campanha.html
+++ b/templates/iniciar_campanha.html
@@ -123,7 +123,7 @@
                                                   <div class="mb-3">
                                                       <label for="racapersonagem" class="form-label">Insira a raça para seu novo personagem:</label>
                                                       <!-- <input type="text" class="form-control" id="racapersonagem" name="racapersonagem" required placeholder="Insira a raça aqui"> -->
-                                                      <select name="racapersonagem" class="form-control" id="racapersonagem" name="racapersonagem" required>
+                                                      <select name="racapersonagem" class="form-control" id="racapersonagem" required>
                                                         <option value="Humano">Humano</option>
                                                         <option value="Elfo">Elfo</option>
                                                         <option value="Anão">Anão</option>
@@ -144,7 +144,20 @@
                                               <div class="container">
                                                   <div class="mb-3">
                                                       <label for="classepersonagem" class="form-label">Insira a classe para seu novo personagem:</label>
-                                                      <input type="text" class="form-control" id="classepersonagem" name="classepersonagem" required placeholder="Insira a classe">
+                                                      <!-- <input type="text" class="form-control" id="classepersonagem" name="classepersonagem" required placeholder="Insira a classe"> -->
+                                                      <select name="classepersonagem" class="form-control" id="classepersonagem" required>
+                                                        <option value="Barbaro">Barbaro</option>
+                                                        <option value="Bardo">Bardo</option>
+                                                        <option value="Clérigo">Clérigo</option>
+                                                        <option value="Druida">Druida</option>
+                                                        <option value="Guerreiro">Guerreiro</option>
+                                                        <option value="Monge">Monge</option>
+                                                        <option value="Paladino">Paladino</option>
+                                                        <option value="Ranger">Ranger</option>
+                                                        <option value="Ladino">Ladino</option>
+                                                        <option value="Feiticeiro">Feiticeiro</option>
+                                                        <option value="Mago">Mago</option>                                                  
+                                                    </select>                                                      
                                                   </div>
                                                   <div class="carouselbuttons" style="display: flex;">
                                                       <button type="button" class="btn btn-primary" data-bs-target="#carouselExample" data-bs-slide="prev">👈Voltar</button>
